fix overflow bug

--- a/todoweather/sass/screen.scss
+++ b/todoweather/sass/screen.scss
@@ -771,7 +771,7 @@ body {
       margin-top: 20px;
       list-style: inside disc;
       max-height: 375px;
-      overflow: scroll;
+      overflow: auto;
       color: #534f4c;
       line-height: 1.5;
     }
